--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="night">
+<html lang="{{ get_locale() }}" data-theme="night">
 
 <head>
     <meta charset="utf-8">
